--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<meta charset="utf-8">
+	<title>Coursera is cool!</title>
 </head>
+
 <body>
-	<h1>Hello Coursera! It's a great day!</h1>
+	Coursera is so cool! I am learning so much!
 </body>
 </html>
