--- a/site/index.html
+++ b/site/index.html
@@ -7,5 +7,13 @@
 
 <body>
 	Coursera is so cool! I am learning so much!
+	<div>*** DIV 1: Some content here ***</div>
+  	<div>*** DIV 2: Following right after div 1 ***</div>
+  	<span>*** SPAN 1: Following right after div 2 ***</span>
+  	<div>
+    	*** DIV 3: Following right after span 1 
+    	<span>*** SPAN 2: INSIDE div 3 ***</span>
+    	Continue content of div 3 ***
+  	</div>
 </body>
 </html>
