--- a/site/index.html
+++ b/site/index.html
@@ -15,5 +15,47 @@
     	<span>*** SPAN 2: INSIDE div 3 ***</span>
     	Continue content of div 3 ***
   	</div>
+
+  	<h1>This is the Main Heading</h1>
+  	<h2>Subheading 2</h2>
+  	<h3>Subheading 3</h3>
+  	<h4>Subheading 4</h4>
+  	<h5>Subheading 5</h5>
+  	<h6>Subheading 6</h6>
+
+  	<h1>Unordered list</h1>
+  	<div>
+    
+    My typical dinner shopping list:
+    <ul>
+      <li>Milk</li>
+      <li>Donuts</li>
+      <li>Cookies
+        <ul>
+          <li>Chocolate</li>
+          <li>Sugar</li>
+          <li>Peanut Butter</li>
+        </ul>
+      </li>
+      <li>Pepto Bismol</li>
+    </ul>
+    </div>
+
+    <h1>Ordered list victory &nbsp;nor&nbsp;defeat </h1>
+  	<div>
+    Oreo cookie eating procedure:
+    <ol>
+      <li>Open box</li>
+      <li>Take out cookie</li>
+      <li>Make a Double Oreo
+        <ol>
+          <li>Peel off the top part &amp;</li>
+          <li>Place another cookie in the middle &lt; </li>
+          <li>Put back the top part &gt; </li>
+        </ol>
+      </li>
+      <li>Enjoy!</li>
+    </ol>
+  	</div>
 </body>
 </html>
