--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>Coursera is cool!</title>
+	<style>
+	p{
+  		color: blue;
+  		font-size: 20px;
+  		width: 200px;
+	}
+
+	h1{
+ 		color: red;
+  		font-size: 36px;
+  		text-align: center;
+	}
+	</style>
 </head>
 
 <body>
@@ -111,12 +124,22 @@
   	<section id="section5">
     	<h2>(#section5) Section 5</h2>
     	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur libero, a voluptate, quasi rem id! Mollitia nostrum quo in dolorum magnam assumenda, architecto odio expedita atque unde, laudantium velit. Et ipsa veritatis voluptatem repellendus consequatur enim asperiores est accusamus cumque dolore sit quae ipsum quas eveniet omnis, fuga temporibus cum doloremque. Eum ab, error facere vero temporibus dignissimos earum cum. Distinctio fuga sit magni commodi illo doloremque, dolor quisquam dolorem saepe fugiat quas voluptates et omnis a iusto ratione quibusdam molestiae voluptate nulla qui id cumque vitae. Quibusdam provident officia obcaecati accusamus facilis quisquam harum nostrum blanditiis ullam? Quo velit rem, quam, quasi quibusdam placeat. Numquam, unde adipisci quas maiores nostrum accusamus id? Odio aut quisquam nulla. Veniam nostrum dolorum blanditiis officiis, aspernatur. Ex hic veritatis, magnam quis accusantium eveniet nemo harum nam facere dolor quam dolorem asperiores quas sequi minima quisquam culpa eos assumenda. Accusamus debitis nesciunt dolores similique incidunt adipisci eaque sapiente ipsa natus, explicabo eligendi commodi cumque porro quas sint sequi quaerat, non repellat quia quibusdam vitae cum quis aliquam, voluptates consequatur. Aperiam delectus tempore, quasi aspernatur ex libero nemo nihil hic exercitationem magni labore minus expedita porro et praesentium suscipit fugit nulla deleniti perferendis eum eligendi voluptas sequi voluptates. Error et unde quae, assumenda accusamus vitae ea quasi, facilis rem illo maiores maxime eaque, perferendis dolorem blanditiis hic iste. Asperiores voluptate, laudantium aliquid itaque! Dignissimos aspernatur quisquam nostrum tempora ducimus tempore dolor magni ad libero, omnis obcaecati, deleniti accusantium enim harum, inventore quod eum! Quasi facere vitae ipsam eveniet, praesentium vel fugiat id expedita a totam, facilis harum voluptatum ex inventore excepturi molestiae tempora non, quia ab commodi, dolore? Non ipsum in quo impedit repudiandae pariatur, itaque id quam, esse eligendi accusantium et, quidem sequi quia voluptas nostrum, excepturi facere recusandae nihil. Cum, nisi sint exercitationem?</p>
-  	</section>
+  		</section>
   	<div>
     	<h2><a name="section6">(#section6) Section 6</a></h2>
     	<p>
       	Back to top: <a href="#top">Back to Top</a>
     	</p>
   	</div>
+
+
+    <h1>Don't be afraid to be &lt;than a 100% success:</h1>
+	<p>
+  		<img src="picture-with-quote.jpg" width="400" height="235" alt="Picture with a quote"> &quot;It is not the critic who counts; not the man who points out how the strong man stumbles, or where the doer of deeds could have done them better. The credit belongs to the man who is actually in the arena, whose face is marred by dust and sweat and blood; who strives valiantly; who errs, who comes short again and again, because there is no effort without error and shortcoming; but who does actually strive to do the deeds; who knows great enthusiasms, the great devotions; who spends himself in a worthy cause; who at the best knows in the end the triumph of high achievement, and who at the worst, if he fails, at least fails while daring greatly, so that his place shall never be with those cold and timid souls who neither know victory nor defeat.&quot;
+	</p>
+	<p>
+		<img src="https://i.imgur.com/Ob7tuZ7.png" width="640" height="480">
+	</p>
+	<p>Theodore Roosevelt 1910 &copy; Copyright</p>
 </body>
 </html>
